[package]
name = "move-to-solana"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generate An Instruction Set code from Move"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
atty = "0.2.14"
bs58 = "0.5.0"
chrono = "0.4"
clap = { version = "3.1.8", features = ["derive"] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
colored = "2.0.0"
env_logger = "0.8.3"
extension-trait = "1.0.1"
libc = "0.2"
llvm-extra-sys = { path = "../llvm-extra-sys" }
llvm-sys = "150.0.3"
log = "0.4.14"
move-binary-format = { path = "../../move-binary-format" }
move-bytecode-source-map = { path = "../../move-ir-compiler/move-bytecode-source-map" }
move-command-line-common = { path = "../../move-command-line-common" }
move-compiler = { path = "../../move-compiler" }
move-core-types = { path = "../../move-core/types" }
move-ir-types = { path = "../../move-ir/types" }
move-model = { path = "../../move-model" }
move-native = { path = "../../move-native" }
move-stackless-bytecode = { path = "../../move-prover/bytecode" }
move-symbol-pool = { path = "../../move-symbol-pool" }
num = "0.4.0"
num-traits = "0.2"
once_cell = "1.10"
parking_lot = "0.11"
regex = "1.1.9"
semver = "1.0.13"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
solana-bpf-loader-program = { git = "https://github.com/solana-labs/solana", rev = "9731331be4dd4bfccf85b0443e3d652aec30a1f8" }
solana-program-runtime = { git = "https://github.com/solana-labs/solana", rev = "9731331be4dd4bfccf85b0443e3d652aec30a1f8" }
solana-sdk = { git = "https://github.com/solana-labs/solana", rev = "9731331be4dd4bfccf85b0443e3d652aec30a1f8" }
solana_rbpf = "=0.6.0"
tempfile = "3.2"

[dev-dependencies]

[features]
solana = []
default = ["solana"]
