[package]
authors = ["Diem Association <opensource@diem.com>"]
description = "Transactional testing framework for Move"
edition = "2021"
homepage = "https://diem.com"
license = "Apache-2.0"
name = "move-transactional-test-runner"
publish = false
repository = "https://github.com/diem/diem"
version = "0.1.0"

[dependencies]
anyhow = "1.0.52"
clap = {version = "3.1.8", features = ["derive"]}
colored = "2.0.0"
hex = "0.4.3"
jpst = "0.1.1"
once_cell = "1.7.2"
rayon = "1.5.0"
regex = "1.1.9"
serde_json = "1.0"
tempfile = "3.2.0"

move-binary-format = {path = "../../move-binary-format"}
move-bytecode-source-map = {path = "../../move-ir-compiler/move-bytecode-source-map"}
move-bytecode-utils = {path = "../../tools/move-bytecode-utils"}
move-cli = {path = "../../tools/move-cli"}
move-command-line-common = {path = "../../move-command-line-common"}
move-compiler = {path = "../../move-compiler"}
move-core-types = {path = "../../move-core/types"}
move-disassembler = {path = "../../tools/move-disassembler"}
move-ir-compiler = {path = "../../move-ir-compiler"}
move-ir-types = {path = "../../move-ir/types"}
move-resource-viewer = {path = "../../tools/move-resource-viewer"}
move-stackless-bytecode-interpreter = {path = "../../move-prover/interpreter"}
move-stdlib = {path = "../../move-stdlib", features = ["testing"]}
move-symbol-pool = {path = "../../move-symbol-pool"}
move-vm-runtime = {path = "../../move-vm/runtime"}
move-vm-test-utils = {path = "../../move-vm/test-utils"}
move-vm-types = {path = "../../move-vm/types"}

[dev-dependencies]
datatest-stable = "0.1.1"
difference = "2.0.0"

[[test]]
harness = false
name = "tests"
