[package]
authors = ["Diem Association <opensource@diem.com>"]
description = "Convert Move bytecode between binery and text format."
edition = "2021"
license = "Apache-2.0"
name = "move-bytecode-converter"
publish = false
version = "0.1.0"

[dependencies]
anyhow = "1.0.52"
clap = {version = "3.1.8", features = ["derive"]}
serde_json = "1.0.64"

move-binary-format = {path = "../../move-binary-format"}
move-bytecode-verifier = {path = "../../move-bytecode-verifier"}

[features]
default = []
