[package]
name = "move-bytecode-viewer"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
anyhow = "1.0.52"
regex = "1.1.9"
tui = "0.17.0"
crossterm = "0.21"

move-command-line-common = { path = "../../move-command-line-common" }
move-bytecode-source-map = { path = "../../move-ir-compiler/move-bytecode-source-map" }
move-ir-types = { path = "../../move-ir/types" }
move-binary-format = { path = "../../move-binary-format" }
move-disassembler = { path = "../move-disassembler" }
workspace-hack = { version = "0.1", path = "../../../crates/workspace-hack" }


[features]
default = []
