[package]
name = "move-explain"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem Move abort code explanations"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
clap = { version = "3", features = ["derive"] }
move-command-line-common = { path = "../../move-command-line-common" }
move-core-types = { path = "../../move-core/types" }
bcs = "0.1.2"
workspace-hack = { version = "0.1", path = "../../../crates/workspace-hack" }

[features]
default = []
