[package]
name = "move-mv-llvm-compiler"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generate LLVM IR from Move bytecode (.mv files)"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
colored = "2.0.0"
libc = "0.2"
once_cell = "1.10"
parking_lot = "0.12"

move-bytecode-verifier = { path = "../../move-bytecode-verifier" }
move-bytecode-source-map = { path = "../../move-ir-compiler/move-bytecode-source-map" }
move-command-line-common = { path = "../../move-command-line-common" }
move-core-types = { path = "../../move-core/types" }
move-ir-types = { path = "../../move-ir/types" }
move-binary-format = { path = "../../move-binary-format" }
move-coverage = { path = "../move-coverage" }
move-compiler = { path = "../../move-compiler" }
move-model = { path = "../../move-model" }
move-stackless-bytecode = { path = "../../move-prover/bytecode" }

clap = { version = "3.1.8", features = ["derive"] }
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
semver = "1.0.13"
llvm-sys = "150.0.3"
llvm-extra-sys = { path = "./llvm-extra-sys" }
extension-trait = "1.0.1"

[dev-dependencies]
datatest-stable = "0.1.1"
similar = "2.1.0"

[dev-dependencies.solana_rbpf]
# nb: this fork is carrying a minor workaround for an undiagnosed issue with how how are linking bpf
git = "https://github.com/brson/rbpf.git"
rev = "124c732056bd05d773ad48107ff1c33fb06dc989"

[features]
default = []

[[test]]
name = "ir-tests"
harness = false

[[test]]
name = "move-ir-tests"
harness = false

[[test]]
name = "rbpf-tests"
harness = false
