[package]
name = "move-mv-llvm-compiler"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generate LLVM IR from Move bytecode (.mv files)"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
colored = "2.0.0"
libc = "0.2"
once_cell = "1.10"
parking_lot = "0.11"

move-bytecode-verifier = { path = "../../move-bytecode-verifier" }
move-bytecode-source-map = { path = "../../move-ir-compiler/move-bytecode-source-map" }
move-command-line-common = { path = "../../move-command-line-common" }
move-core-types = { path = "../../move-core/types" }
move-ir-types = { path = "../../move-ir/types" }
move-binary-format = { path = "../../move-binary-format" }
move-coverage = { path = "../move-coverage" }
move-compiler = { path = "../../move-compiler" }
move-model = { path = "../../move-model" }
move-native = { path = "../../move-native" }
move-stackless-bytecode = { path = "../../move-prover/bytecode" }

clap = { version = "3.1.8", features = ["derive"] }
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
semver = "1.0.13"
llvm-sys = "150.0.3"
llvm-extra-sys = { path = "./llvm-extra-sys" }
extension-trait = "1.0.1"

[dev-dependencies]
datatest-stable = "0.1.1"
similar = "2.1.0"
thiserror = "1.0.37"

[dev-dependencies.solana_rbpf]
git = "https://github.com/solana-labs/rbpf.git"
rev = "c03dbfef82487396fc6f96d2cfeca409d6181192"

[features]
default = []

[[test]]
name = "ir-tests"
harness = false

[[test]]
name = "move-ir-tests"
harness = false

[[test]]
name = "rbpf-tests"
harness = false
