[package]
name = "move-mv-llvm-compiler"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Generate LLVM IR from Move bytecode (.mv files)"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
colored = "2.0.0"
env_logger = "0.8.3"
libc = "0.2"
log = "0.4.14"
chrono = "0.4"
once_cell = "1.10"
parking_lot = "0.11"
toml = "0.5.8"
regex = "1.1.9"
move-bytecode-verifier = { path = "../../move-bytecode-verifier" }
move-bytecode-source-map = { path = "../../move-ir-compiler/move-bytecode-source-map" }
move-command-line-common = { path = "../../move-command-line-common" }
move-core-types = { path = "../../move-core/types" }
move-ir-types = { path = "../../move-ir/types" }
move-binary-format = { path = "../../move-binary-format" }
move-coverage = { path = "../move-coverage" }
move-compiler = { path = "../../move-compiler" }
move-model = { path = "../../move-model" }
move-native = { path = "../../move-native" }
move-stackless-bytecode = { path = "../../move-prover/bytecode" }
move-stdlib = { path = "../../move-stdlib" }
move-symbol-pool = { path = "../../move-symbol-pool" }
move-cli = { path = "../../tools/move-cli" }
move-package = { path = "../../tools/move-package" }
clap = { version = "3.1.8", features = ["derive"] }
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
semver = "1.0.13"
llvm-sys = "150.0.3"
llvm-extra-sys = { path = "./llvm-extra-sys" }
extension-trait = "1.0.1"
num = "0.4.0"
num-traits = "0.2"
codespan = "0.11.1"
codespan-reporting = "0.11.1"

[dev-dependencies]
datatest-stable = "0.1.1"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
similar = "2.1.0"
solana-bpf-loader-program = { git = "https://github.com/solana-labs/solana", rev = "9731331be4dd4bfccf85b0443e3d652aec30a1f8" }
solana-program-runtime = { git = "https://github.com/solana-labs/solana", rev = "9731331be4dd4bfccf85b0443e3d652aec30a1f8" }
solana-sdk = { git = "https://github.com/solana-labs/solana", rev = "9731331be4dd4bfccf85b0443e3d652aec30a1f8" }
solana_rbpf = "=0.6.0"
thiserror = "1.0.37"

[features]
solana = []
default = ["solana"]

[[test]]
name = "ir-tests"
harness = false

[[test]]
name = "move-ir-tests"
harness = false

[[test]]
name = "rbpf-tests"
harness = false

[[test]]
name = "move-to-llvm-tests"
harness = false

[[test]]
name = "stdlib-tests"
harness = false

[[test]]
name = "stdlib-with-p-option-tests"
harness = false

[[test]]
name = "cli-tests"
harness = false
