[package]
name = "move-table-extension"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Wrapper for the Move VM which coordinates multiple extensions"
repository = "https://github.com/diem/move"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.52"
downcast-rs = "1.2.0"
walkdir = "2.3.1"
itertools = "0.10.0"
smallvec = "1.6.1"
bcs = "0.1.2"
sha3 = "0.9.1"
once_cell = "1.7.2"
move-command-line-common = { path = "../../move-command-line-common" }
move-core-types = { path = "../../move-core/types" }
move-compiler = { path = "../../move-compiler" }
move-vm-types = { path = "../../move-vm/types" }
move-vm-runtime = { path = "../../move-vm/runtime", features = ["debugging"] }
move-binary-format = { path = "../../move-binary-format" }
workspace-hack = { version = "0.1", path = "../../../crates/workspace-hack" }

[dev-dependencies]
move-stdlib = { path = "../../move-stdlib", features = ["testing"] }
move-unit-test = { path = "../../tools/move-unit-test", features = ["table-extension"] }
tempfile = "3.2.0"
#dir-diff = "0.3.2"
#file_diff = "1.0.0"
move-cli = { path = "../../tools/move-cli" }
move-package = { path = "../../tools/move-package" }
