[package]
name = "mirai-dataflow-analysis"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "MIRAI Dataflow analysis tool"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
csv = "1.1"
mirai-annotations = "1.12"
regex = "1.4.3"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
clap = { version = "3.1.8", features = ["derive"] }
workspace-hack = { version = "0.1", path = "../../../crates/workspace-hack" }
